@@ -111,7 +111,7 @@ class ApiMain extends ApiBase {
 						'params' => array()
 					),
 					'apihighlimits'	=> array(
-						'msg' => 'Use higher limits in API queries (Slow queries: $1 results; Fast queries: $2 results). These limits also apply to multivalue parameters.',
+						'msg' => 'Use higher limits in API queries (Slow queries: $1 results; Fast queries: $2 results). The limits for slow queries also apply to multivalue parameters.',
 						'params' => array (ApiMain::LIMIT_SML2, ApiMain::LIMIT_BIG2)
 					)
 	);
